--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
         <div id="button-div">
             <button id = "add-button">Add Album</button>
         </div>
+        <div id="real-delete-button-div">
+            <h3>Are you sure you want to delete this album?</h3>
+            <a id="real-delete-button" href="#">I'm sure!</a>
+            <a id="cancel-button" href="#">I'm not so sure...</a>
+        </div>
         <div id="add-album-box">
             <h2 id="add-album-title">Add Album</h2>
             <form id="add-album-form" method="post">
@@ -35,8 +40,8 @@
                     <div id="band-members-div"></div>
                 </p>
                 <p>
-                    <label for="picture">Upload album cover:</label>
-                    <input type="file" id="picture" name="picture">
+                    <label for="cover">Upload album cover:</label>
+                    <input type="file" id="cover" name="cover">
                 </p>
                 <button type="submit">Submit</button>
             </form>
